# stigmerge

./: Cargo.toml  Dockerfile  README.md  SECURITY.md  dist-workspace.toml  flake.nix  fly.toml  release-plz.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml  flake.yml  release-plz.yml  release.yml  test.yml
discovery-test/: Cargo.toml
discovery-test/src/: main.rs
examples/fly.io/: Dockerfile
scripts/: e2e_seed_fetch.sh
stigmerge/: CHANGELOG.md  Cargo.toml
stigmerge-fileindex/: CHANGELOG.md  Cargo.toml
stigmerge-fileindex/src/: from_file_tests.rs  lib.rs  tests.rs  want_have_tests.rs
stigmerge-peer/: CHANGELOG.md  Cargo.toml
stigmerge-peer/examples/: fetch_block.rs  fetcher_resolver.rs  lease_manager_demo.rs  peer_announce.rs  seeder_announcer.rs  share_announce.rs  syncer.rs
stigmerge-peer/proto/: stigmerge.capnp
stigmerge-peer/src/: actor.rs  block_fetcher.rs  chan_rpc.rs  content_addressable.rs  error.rs  fetcher.rs  have_announcer.rs  have_map.rs  have_resolver.rs  lib.rs  peer_announcer.rs  peer_gossip.rs  peer_resolver.rs  peer_tracker.rs  piece_map.rs  piece_verifier.rs  record.rs  retry.rs  seeder.rs  share_announcer.rs  share_resolver.rs  types.rs  veilid_config.rs
stigmerge-peer/src/fetcher2/: block_fetcher.rs  fetcher.rs  mod.rs  piece_verifier.rs  seeder.rs  types.rs  verifier.rs
stigmerge-peer/src/node/: mod.rs  veilid.rs
stigmerge-peer/src/peer/: mod.rs  observable.rs  veilid.rs
stigmerge-peer/src/piece_leases/: DESIGN.md  error.rs  manager.rs  mod.rs  peer_ranking.rs  types.rs
stigmerge-peer/src/piece_leases/tests/: examples.rs  mod.rs  unit.rs
stigmerge-peer/src/proto/: block_request.rs  header.rs  index.rs  mod.rs  peerinfo.rs  request.rs  response.rs  stigmerge_capnp.rs
stigmerge-peer/src/tests/: mod.rs  stub_node.rs  stub_peer.rs
stigmerge-peer/src/tracker/: have_announcer.rs  have_resolver.rs  mod.rs  peer_announcer.rs  peer_resolver.rs  share_resolver.rs
stigmerge/src/: app.rs  cli.rs  info.rs  lib.rs  share.rs
