[workspace]
resolver = "2"
members = [
    "stigmerge-fileindex",
    "stigmerge-peer",
    "stigmerge",
    "discovery-test",
]

[workspace.package]
authors = ["Casey Marshall <me@cmars.tech>"]
documentation = "https://github.com/cmars/stigmerge"
edition = "2021"
homepage = "https://github.com/cmars/stigmerge"
license = "MPL-2.0"
repository = "https://github.com/cmars/stigmerge"
version = "0.4.2"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
backoff = { version = "0.4", features = ["tokio"] }
sha2 = { version = "0.10", features = ["asm"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
veilid-core = { version = "0.4.4" }

[profile.release]
strip = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Deranged 0.4.1 breaks type inference in other dependencies. Patch it to 0.4.0 commit hash.
[patch.crates-io]
deranged = { git = "https://github.com/jhpratt/deranged", rev = "3c95431a375bca409a4731ae8749acc84e076267" }
