[workspace]
resolver = "2"
members = [
    "stigmerge-fileindex",
    "stigmerge-peer",
    "stigmerge",
]

[workspace.package]
authors = ["Casey Marshall <me@cmars.tech>"]
documentation = "https://github.com/cmars/stigmerge"
edition = "2021"
homepage = "https://github.com/cmars/stigmerge"
license = "MPL-2.0"
repository = "https://github.com/cmars/stigmerge"
version = "0.5.10"
rust-version = "1.88"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
# Core dependencies
anyhow = { version = "1.0", features = ["std", "backtrace"] }
backoff = { version = "0.4", features = ["tokio"] }
sha2 = { version = "0.10", features = ["asm"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and utilities
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
hex = "0.4"
indicatif = { version = "0.18", features = ["tokio", "futures"] }
path-absolutize = "3.1"

# Networking and P2P
veilid-core = "0.5.1"
veilnet = "0.4.2"

# Platform-specific
jni = { version = "0.21", features = ["invocation"] }

# Concurrency and async
flume = { version = "0.11", features = ["async"] }
num_cpus = "1.16"

# Serialization and protocols
capnp = "0.21"
capnpc = "0.21"

# Utilities
thiserror = "2.0"
tokio-retry = "0.3.0"

# Development dependencies
hex-literal = "0.4"
tempfile = "3.13"

[profile.release]
strip = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
veilid-core = { git = "https://gitlab.com/veilid/veilid", branch = "0.5.2-pre" }