[package]
name = "stigmerge_fileindex"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.5.8"
description = "stigmerge file indexing"
documentation = "https://docs.rs/stigmerge_fileindex"

[lib]
name = "stigmerge_fileindex"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
flume = { workspace = true }
num_cpus = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.8"

[dev-dependencies]
hex-literal = { workspace = true }
tempfile = { workspace = true }
