[package]
name = "stigmerge_peer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.5.8"
documentation = "https://docs.rs/stigmerge-peer"
description = "stigmerge p2p protocol and agent components"
build = "build.rs"

[lib]
name = "stigmerge_peer"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
capnp = "0.20"
flume = { version = "0.11", features = ["async"] }
hex = "0.4"
path-absolutize = "3.1"
rand = "0.8"
stigmerge_fileindex = { version = "0", path = "../stigmerge-fileindex" }
thiserror = "2.0"
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-utils = { version = "0.1" }
tracing = { workspace = true }
veilid-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"

[build-dependencies]
capnpc = "0.20"
hex = "0.4"

[target.'cfg(unix)'.build-dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }

[package.metadata.docs.rs]
rustc-args = [ "--cfg" , "doc"]
