[package]
name = "stigmerge_peer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.5.14"
documentation = "https://docs.rs/stigmerge-peer"
description = "stigmerge p2p protocol and agent components"
build = "build.rs"

[lib]
name = "stigmerge_peer"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
capnp = { workspace = true }
flume = { workspace = true }
hex = { workspace = true }
path-absolutize = { workspace = true }
stigmerge_fileindex = { version = "0", path = "../stigmerge-fileindex" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
veilid-core = { workspace = true }
veilnet = { workspace = true }

[features]
refactor = []

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"

[build-dependencies]
capnpc = { workspace = true }
hex = { workspace = true }

[target.'cfg(unix)'.build-dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
veilnet = { workspace = true, features = ["testing"] }

[package.metadata.docs.rs]
rustc-args = [ "--cfg" , "doc"]
