[package]
name = "stigmerge"
default-run = "stigmerge"
description = "Anonymous decentralized file distribution and transfer"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.5.8"

[package.metadata.wix]
upgrade-guid = "B2D446B7-C4C2-4939-8A9E-C6039D89BAE8"
path-guid = "F2AA53E2-105C-4A4F-BE29-C072AB5754A2"
license = false
eula = false

[lib]
name = "stigmerge"
path = "src/lib.rs"

[[bin]]
name = "stigmerge"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
hex = "0.4"
indicatif = { version = "0.18", features = ["tokio", "futures"] }
path-absolutize = "3.1"
stigmerge_fileindex = { version = "0", path = "../stigmerge-fileindex" }
stigmerge_peer = { version = "0", path = "../stigmerge-peer" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
veilid-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.8"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"] }

[package.metadata.docs.rs]
rustc-args = [ "--cfg" , "doc"]
