[package]
name = "stigmerge"
default-run = "stigmerge"
description = "Anonymous decentralized file distribution and transfer"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.5.13"

[package.metadata.wix]
upgrade-guid = "B2D446B7-C4C2-4939-8A9E-C6039D89BAE8"
path-guid = "F2AA53E2-105C-4A4F-BE29-C072AB5754A2"
license = false
eula = false

[lib]
name = "stigmerge"
path = "src/lib.rs"

[[bin]]
name = "stigmerge"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
path-absolutize = { workspace = true }
stigmerge_fileindex = { version = "0", path = "../stigmerge-fileindex" }
stigmerge_peer = { version = "0", path = "../stigmerge-peer" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
veilid-core = { workspace = true }
veilnet = { workspace = true }

[target.'cfg(unix)'.dependencies]
sha2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.8"

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }

[package.metadata.docs.rs]
rustc-args = [ "--cfg" , "doc"]
